--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(/images/debby-hudson-VYSoKKGPElU-unsplash.jpg);
+    background-image: url(../images/debby-hudson-VYSoKKGPElU-unsplash.jpg);
     background-size: cover;
     background-position: center;
     background-repeat:round;
